# LambdaCalculusInterpreter

./: .gitignore  CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  TokenType.cpp
AST/: AstAbstraction.cpp  AstAbstraction.h  AstApplication.cpp  AstApplication.h  AstEntity.cpp  AstEntity.h  AstEntityType.cpp  AstEntityType.h  AstIdentifier.cpp  AstIdentifier.h  Epsilon.cpp  Epsilon.h
